--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "homepage": "https://github.com/marciocrodrigues/03-api-solid#readme",
   "devDependencies": {
-    "@types/node": "^20.6.0",
-    "tsup": "^7.2.0",
-    "tsx": "^3.12.8",
-    "typescript": "^5.2.2"
+    "@types/node": "20.6.0",
+    "tsup": "7.2.0",
+    "tsx": "3.12.8",
+    "typescript": "5.2.2"
   },
   "dependencies": {
-    "fastify": "^4.22.2"
+    "fastify": "4.22.2"
   }
 }
