--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/marciocrodrigues/03-api-solid#readme",
   "devDependencies": {
+    "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.6.0",
+    "eslint": "8.49.0",
     "tsup": "7.2.0",
     "tsx": "3.12.8",
     "typescript": "5.2.2"
