chore: arquivo do coker compose para o banco postgresql

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/srver.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "prisma:studio": "prisma studio"
   },
   "repository": {
     "type": "git",
