--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/marciocrodrigues/03-api-solid#readme",
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
+    "@types/bcryptjs": "2.4.3",
     "@types/node": "20.6.0",
     "eslint": "8.49.0",
     "prisma": "5.2.0",
@@ -31,6 +32,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.2.0",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.22.2",
     "zod": "3.22.2"
