--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,11 @@
         "@rocketseat/eslint-config/node"
     ],
     "rules": {
-        "camelcase": "off"
+        "camelcase": "off",
+        "no-useless-constructor": "off",
+        "object-curly-spacing": [
+            "error",
+            "always"
+        ]
     }
 }
