--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/srver.js",
     "build": "tsup src --out-dir build",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,9 @@
     "prisma": "5.2.0",
     "tsup": "7.2.0",
     "tsx": "3.12.8",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "vite-tsconfig-paths": "4.2.1",
+    "vitest": "0.34.4"
   },
   "dependencies": {
     "@prisma/client": "5.2.0",
