--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "tsup src --out-dir build",
     "prisma:studio": "prisma studio",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,8 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcryptjs": "2.4.3",
     "@types/node": "20.6.0",
+    "@vitest/coverage-v8": "0.34.4",
+    "@vitest/ui": "0.34.4",
     "eslint": "8.49.0",
     "prisma": "5.2.0",
     "tsup": "7.2.0",
